# tekhne

./: .gitignore  .markdownlint-cli2.jsonc  .markdownlintignore  .mcp.json  .plumber.yaml  .release-please-manifest.json  .tmp-check-skills.sh  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PUNCHLIST.md  README.md  SECURITY.md  TILES.md  biome.json  cucumber.js  dist-workspace.toml  hk.pkl  lefthook-local.example.yml  lefthook.yml  mise.toml  package.json  python-allowlist.txt  release-please-config.json  tessl.json
.aislop/: config.yml
.claude/: settings.local.json
crates/adr/: Cargo.toml  build.rs
crates/adr/src/: adr.rs  date.rs  install_cmd.rs  lib.rs  main.rs  skill_bundle.rs
crates/adr/tests/: integration.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  error.rs  fs.rs  lib.rs  output.rs
crates/journal/: Cargo.toml  build.rs
crates/journal/src/: backfill.rs  date.rs  entry.rs  index.rs  install_cmd.rs  lib.rs  lint.rs  main.rs  scan.rs  skill_bundle.rs  taxonomy.rs  validate.rs
crates/journal/tests/: backfill.rs  index.rs  lint.rs  roundtrip.rs
crates/skill-auditor/: Cargo.toml  build.rs
crates/skill-auditor/src/: aggregation.rs  duplication.rs  install_cmd.rs  lib.rs  main.rs  pattern_analysis.rs  prune.rs  quality_signals.rs  reports.rs  semantic.rs  skill_bundle.rs  tessl.rs
crates/skill-auditor/src/reporter/: analysis.rs  mod.rs  remediation.rs  report.rs  store.rs
crates/skill-auditor/src/scorer/: agents.rs  bridge.rs  d1_knowledge_delta.rs  d2_mindset_procedures.rs  d3_anti_pattern.rs  d4_specification.rs  d5_progressive_disclosure.rs  d6_freedom_calibration.rs  d7_pattern_recognition.rs  d8_practical_usability.rs  d9_eval_validation.rs  grades.rs  helpers.rs  mod.rs
crates/skill-auditor/testdata/fixtures/skill-full/: SKILL.md
crates/skill-auditor/testdata/fixtures/skill-full/evals/: summary.json
crates/skill-auditor/testdata/fixtures/skill-full/evals/scenario-1/: capability.txt  criteria.json
crates/skill-auditor/testdata/fixtures/skill-full/evals/scenario-2/: capability.txt  task.md
crates/skill-auditor/testdata/fixtures/skill-full/evals/scenario-3/: criteria.json  task.md
crates/skill-auditor/tests/: grade_parity.rs
crates/skill-auditor/tests/golden-corpus/: README.md  corpus.txt  goldens.json
crates/skill-auditor/tests/golden-corpus/goref/: go.mod  main.go
crates/skill-validator-rs/: Cargo.toml
crates/skill-validator-rs/src/: artifacts.rs  contamination.rs  content.rs  lib.rs  links.rs  main.rs  model.rs  render.rs  run.rs  skill.rs  types.rs  util.rs
crates/skill-validator-rs/src/structure/: frontmatter.rs  fsutil.rs  internal_links.rs  markdown.rs  mod.rs  orphans.rs  tokens.rs
crates/skill-validator-rs/tests/: cli.rs  golden_parity.rs  token_parity.rs
crates/skill-validator-rs/tests/golden-corpus/: README.md  corpus.txt  goldens.json
crates/skill-validator-rs/tests/golden-corpus/fixtures/boundary/aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa/: SKILL.md
crates/skill-validator-rs/tests/golden-corpus/fixtures/boundary/aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa/: SKILL.md
crates/skill-validator-rs/tests/golden-corpus/fixtures/boundary/body-500-lines/: SKILL.md
crates/skill-validator-rs/tests/golden-corpus/fixtures/boundary/body-501-lines/: SKILL.md
crates/skill-validator-rs/tests/golden-corpus/fixtures/boundary/desc-1024/: SKILL.md
crates/skill-validator-rs/tests/golden-corpus/fixtures/boundary/desc-1025/: SKILL.md
crates/skill-validator-rs/tests/golden-corpus/fixtures/boundary/fence-unclosed/: SKILL.md
crates/skill-validator-rs/tests/golden-corpus/fixtures/boundary/keyword-stuffed/: SKILL.md
crates/skill-validator-rs/tests/golden-corpus/fixtures/boundary/link-traversal/: SKILL.md
crates/skill-validator-rs/tests/golden-corpus/fixtures/examples/: README.md
crates/skill-validator-rs/tests/golden-corpus/fixtures/examples/review-skill/: SKILL.md
crates/skill-validator-rs/tests/golden-corpus/fixtures/examples/review-skill/references/: install-skill-validator.md  llm-scoring.md
crates/skill-validator-rs/tests/golden-corpus/fixtures/testdata/allowed-dirs-skill/: SKILL.md
crates/skill-validator-rs/tests/golden-corpus/fixtures/testdata/allowed-dirs-skill/evals/: evals.json
crates/skill-validator-rs/tests/golden-corpus/fixtures/testdata/allowed-dirs-skill/references/: guide.md
crates/skill-validator-rs/tests/golden-corpus/fixtures/testdata/allowed-dirs-skill/scripts/: validate.sh
crates/skill-validator-rs/tests/golden-corpus/fixtures/testdata/allowed-dirs-skill/testing/: fixtures.json
crates/skill-validator-rs/tests/golden-corpus/fixtures/testdata/broken-frontmatter/: SKILL.md
crates/skill-validator-rs/tests/golden-corpus/fixtures/testdata/flat-skill/: SKILL.md  extract.py  guide.md  template.txt
crates/skill-validator-rs/tests/golden-corpus/fixtures/testdata/invalid-skill/: SKILL.md
crates/skill-validator-rs/tests/golden-corpus/fixtures/testdata/invalid-skill/references/: exists.md
crates/skill-validator-rs/tests/golden-corpus/fixtures/testdata/multi-skill/skill-alpha/: SKILL.md
crates/skill-validator-rs/tests/golden-corpus/fixtures/testdata/multi-skill/skill-beta/: SKILL.md
crates/skill-validator-rs/tests/golden-corpus/fixtures/testdata/multi-skill/skill-gamma/: SKILL.md
crates/skill-validator-rs/tests/golden-corpus/fixtures/testdata/rich-skill/: SKILL.md
crates/skill-validator-rs/tests/golden-corpus/fixtures/testdata/valid-skill/: SKILL.md
crates/skill-validator-rs/tests/golden-corpus/fixtures/testdata/valid-skill/assets/: template.md
crates/skill-validator-rs/tests/golden-corpus/fixtures/testdata/valid-skill/references/: guide.md
crates/skill-validator-rs/tests/golden-corpus/fixtures/testdata/warnings-only-skill/: SKILL.md
crates/skill-validator-rs/tests/golden-corpus/goref/: go.mod  go.sum  main.go
crates/skill-validator-rs/tests/token-parity/: README.md  corpus.jsonl  descriptions.json  expected_counts.json  gen_corpus.mjs
crates/skill-validator-rs/tests/token-parity/goref/: go.mod  go.sum  main.go
(+5307 files in other folders)
