[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/skill-install",
    "crates/skill-validator-rs",
]

[workspace.package]
edition = "2021"
license = "ISC"
repository = "https://github.com/pantheon-org/tekhne"
rust-version = "1.96"

# Shared dependencies for the tekhne tool crates. Added as each wave needs
# them (A2 introduces the foundational set below).
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tempfile = "3"

[profile.release]
lto = "thin"
strip = true
