[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/skill-install",
    "crates/skill-validator-rs",
    "crates/skill-auditor",
]

[workspace.package]
edition = "2021"
license = "ISC"
repository = "https://github.com/pantheon-org/tekhne"
rust-version = "1.96"

# Shared dependencies for the tekhne tool crates. Added as each wave needs
# them (A2 introduces the foundational set below).
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tempfile = "3"
common = { path = "crates/common" }
# skill-validator-rs (A4a): offline-deterministic port of the Go validator.
tiktoken-rs = "0.12"
regex = "1"
serde_yaml_ng = "0.10"
clap = { version = "4", features = ["derive"] }
# skill-validator-rs is consumed by the Rust auditor (A4b).
skill-validator-rs = { path = "crates/skill-validator-rs" }
# skill-install backs the auditor's self-contained `skill install` command (A5).
skill-install = { path = "crates/skill-install" }

[profile.release]
lto = "thin"
strip = true
