[package]
name = "common"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false
description = "Shared configuration, error types, structured output, and filesystem helpers for the tekhne tool crates."

[dependencies]
