[package]
name = "pantheon-journal"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false
description = "Create and validate structured journal entries, promoting the journal-entry-creator skill into a self-contained CLI."

# Opt this crate into cargo-dist: workspace policy sets `publish = false`, which
# otherwise hides the binary from dist. The shared release workflow is
# regenerated separately (A8 only sets the flag).
[package.metadata.dist]
dist = true

[lib]
name = "journal"
path = "src/lib.rs"

[[bin]]
name = "pantheon-journal"
path = "src/main.rs"

[dependencies]
skill-install = { workspace = true }
common = { workspace = true }
regex = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
