[package]
name = "skill-validator-rs"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false
description = "Deterministic, offline skill validation (structure, content, token counts) for the tekhne auditor."

[lib]
name = "skill_validator_rs"
path = "src/lib.rs"

[[bin]]
name = "skill-validator-rs"
path = "src/main.rs"

[dependencies]
common = { workspace = true }
tiktoken-rs = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
